--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -6,8 +6,22 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name="be.imec.apt.iwslib.example.MainActivity">
+        android:theme="@style/AppTheme"
+        android:name=".ExampleApp">
+        <activity android:name=".simple.DiscoverAndStreamActivity"
+                  android:label="@string/simple_activity_name"
+                  android:taskAffinity="be.imec.apt.iwslib.example.DiscoverAndStreamActivity"
+                  android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".multi.MultiDeviceActivity"
+                  android:label="@string/multi_device_activity_name"
+                  android:taskAffinity="be.imec.apt.iwslib.example.MultiDeviceActivity"
+                  android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
