--- a/build.gradle
+++ b/build.gradle
@@ -12,14 +12,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.2"
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "be.imec.apt.iwslib.example"
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 27
-        versionCode 2
-        versionName "0.92"
+        versionCode 3
+        versionName "0.93"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -39,18 +39,18 @@ repositories {
 }
 
 dependencies {
-    //compile fileTree(dir: 'libs', include: ['*.jar'])
-    //compile project(':iwslib')
-    compile 'be.imec.apt:iwslib:0.99.1' // <-- the imec Wearable Streaming Library for Android! (fetched from the arti.imec-apt.be repository defined above)
+    //implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //implementation project(':libIWS')
+    implementation 'be.imec.apt:iwslib:0.99.2' // <-- the imec Wearable Streaming Library for Android (fetched from the arti.imec-apt.be repository defined above)
 
-    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'net.danlew:android.joda:2.9.9.1'
+    implementation 'net.danlew:android.joda:2.9.9.2'
 
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
